--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: default
     <!--self-picked pictures on the right column -->
     <div class="picture-list">
       <img src="img/topomap_opt.jpg" alt="Beautiful Pic" />
-      <img src="img/maproom_opt.jpeg" alt="Beautiful Pic" />
+      <img src="img/maproom_opt.jpg" alt="Beautiful Pic" />
     </div>
   </div>
 
