--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ layout: default
       </div>
     </div>
     <!--self-picked pictures on the right column -->
+      <div class="picture-list">
       <img src="img/topomap_opt.jpg" alt="Beautiful Pic" />
       <img src="img/maproom_opt.jpg" alt="Beautiful Pic" />
-
     </div>
   </div>
 
