--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
+published: true
 ---
+
 
 <div class="home">
 
@@ -45,6 +47,7 @@ layout: default
     </div>
     <!--self-picked pictures on the right column -->
       <div class="picture-list">
+        <img src="http://img-9gag-fun.9cache.com/photo/azV4Nyq_700b_v1.jpg" alt="Mars" />
       <img src="img/topomap_opt.jpg" alt="Beautiful Pic" />
       <img src="img/maproom_opt.jpg" alt="Beautiful Pic" />
     </div>
