--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@ published: true
         {% endfor %}
       </div>
     </div>
-    <!--self-picked pictures on the right column -->
+    <!--self-picked pictures and videos on the right column -->
       <div class="picture-list">
+        <iframe width="100%" height="250px" src="https://www.youtube.com/embed/CWma_kBHOjk" frameborder="0" allowfullscreen></iframe>
         <img src="http://img-9gag-fun.9cache.com/photo/azV4Nyq_700b_v1.jpg" alt="Mars" />
-      <img src="img/topomap_opt.jpg" alt="Beautiful Pic" />
-      <img src="img/maproom_opt.jpg" alt="Beautiful Pic" />
+        <img src="img/topomap_opt.jpg" alt="Beautiful Pic" />
+        <img src="img/maproom_opt.jpg" alt="Beautiful Pic" />
     </div>
   </div>
 
