--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ published: true
   </div>
 
   <div class="page-col-2">
-    <!-- Geo-Link boxes on the rigth column-->
+    <!-- Geo-Link boxes on the rigth column
     <div class="geo-links">
       <div class="link-list">
         <h1 class="link-list-heading">websites & blogs</h1>
@@ -44,9 +44,10 @@ published: true
         <a href="{{ item.url }}" >{{ item.title }}</a></br>
         {% endfor %}
       </div>
-    </div>
+    </div>-->
     <!--self-picked pictures and videos on the right column -->
       <div class="picture-list">
+        <iframe src="http://www.esa.int/spaceinvideos/content/view/embedjw/460286" width="100%" height="250px" frameborder="0"></iframe>
         <iframe width="100%" height="250px" src="https://www.youtube.com/embed/CWma_kBHOjk" frameborder="0" allowfullscreen></iframe>
         <img src="http://img-9gag-fun.9cache.com/photo/azV4Nyq_700b_v1.jpg" alt="Mars" />
         <img src="img/topomap_opt.jpg" alt="Beautiful Pic" />
